test/expr/bad-binary-empty.txt
;;; ERROR: 1
(module (func (i32.add)))
(;; STDERR ;;;
expr/bad-binary-empty.txt:2:23: syntax error, unexpected ), expecting (
;;; STDERR ;;)
